# opentrack

./: .gitignore
.github/workflows/: cmake.yml
cmake/: FindONNXRuntime.cmake
compat/: CMakeLists.txt  camera-names-apple.mm  camera-names.cpp
gui/: options-dialog.cpp  options-dialog.ui
gui/lang/: de_DE.ts  nl_NL.ts  ru_RU.ts  stub.ts  zh_CN.ts
logic/: main-settings.hpp  pipeline.cpp  pipeline.hpp
tracker-neuralnet/: CMakeLists.txt  ftnoir_tracker_neuralnet.h
tracker-papertracker/: CMakeLists.txt  anglecoveragetracker.cpp  anglecoveragetracker.h  config.h  head.cpp  head.h  marker-detect.cpp  marker-detect.h  marker.h  meanvector.cpp  meanvector.h  papertracker-dialog.cpp  papertracker-dialog.h  papertracker-help-dialog.cpp  papertracker-help-dialog.h  papertracker-help.ui  papertracker-settings.cpp  papertracker-settings.h  papertracker-util.cpp  papertracker-util.h  papertracker.cpp  papertracker.h  papertracker.qrc  papertracker.ui
tracker-papertracker/html/: papertracker-help.html
video-opencv/: impl.hpp
x-plane-plugin/: README.md  plugin.c
